# RunixLauncher

./: .gitignore  .gitmodules  Makefile  README.md  RunixLauncher.sln
.github/workflows/: AppImageBuild.yml  Release.yml
GameLibrary_GTKOverlay/: Cargo.toml
GameLibrary_GTKOverlay/src/: main.rs
Runix.DataAccess/: Runix.DataAccess.csproj
Runix.Input/: ControllerInputHandler.cs  IControllerInputCallback.cs  MappingHandler.cs  Runix.Input.csproj
Runix.Logic/: ConfigHandler.cs  DependencyManager.cs  EncryptionHelper.cs  FileManager.cs  GlobalSuppressions.cs  ImageManager.cs  LibraryManager.cs  OverlayManager.cs  Runix.Logic.csproj  RunnerManager.cs  TagManager.cs
Runix.Logic/Enums/: ConfigKeys.cs  Game_Config.cs
Runix.Logic/GameEmbeds/: GameEmbed_Firejail.cs  GameEmbed_Flatpak.cs  GameEmbed_Locale.cs  IGameEmbed.cs
Runix.Logic/GameRunners/: GameRunnerHelperMethods.cs
Runix.Logic/Helpers/: ConfigProvider.cs  ExtensionMethods.cs  GithubVersionHelper.cs  SteamHelper.cs  WineHelper.cs
Runix.Logic/Integration/: Integration_Steam.cs
Runix.Logic/Interfaces/: IImageFetcher.cs  IUILinker.cs
Runix.Logic/Objects/: GameDto.cs  GameDto_Custom.cs  GameDto_Steam.cs  GameFilterRequest.cs  LibraryDto.cs  RunnerDto.cs  RunnerDto_Wine.cs  RunnerDto_umu.cs
Runix.Logic/Settings/: SettingBase.cs  Setting_Button.cs  Setting_Database.cs  (+6 more)
Runix.Structure/: Runix.Structure.csproj
RunixLauncher/: .editorconfig  App.axaml  App.axaml.cs  GlobalSuppressions.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  RunixLauncher.csproj  RunixLauncher.sln  app.manifest  global.json
(+133 files in other folders)
